# Arctic-Fox

./: #TODO.md#  +  .eslintignore  .eslintrc  .gitignore  .hgignore  .lldbinit  .taskcluster.yml  .ycm_extra_conf.py  1152577.patch  AUTHORS  CLOBBER  LICENSE  Makefile.in  README.md  ServiceWorkerManager.cpp  TODO.md  aclocal.m4  client.mk  configure.in  configure.in.mp3-10.7  configure.py  gfxMacPlatformFontList.mm  index.html  log  moz.build  moz.configure  mozcfg-10.6  mozcfg-10.7+  mozcfg-amd64linux  mozcfg-generic-linux  mozcfg-i386OpenBSD  mozcfg-i386cross  mozcfg-pi4-raspbian  mozcfg-ppc32linux  mozcfg-ppc64linux  mozcfg-ppc64toppc32  mozcfg-universal  mozconfig  mozilla-config.h.in  (+4 more)
browser/: LICENSE  Makefile.in  app.mozbuild  build.mk  configure.in  confvars.sh  moz.build
browser/app/: Makefile.in  arcticfox.exe.manifest  blocklist.xml  module.ver  moz.build  nsBrowserApp.cpp  palemoon.exe.manifest  splash.rc
browser/base/: jar.mn  moz.build
browser/branding/: branding-common.mozbuild
browser/components/: BrowserComponents.manifest  distribution.js  moz.build  nsBrowserContentHandler.js  nsBrowserGlue.js
browser/config/: version.txt  version_display.txt
browser/devtools/: definitions.js  devtools-clhandler.js  devtools-clhandler.manifest  main.js  moz.build
browser/experiments/: Experiments.jsm  moz.build
browser/extensions/: moz.build
browser/fonts/: README.txt  moz.build
browser/installer/: Makefile.in  allowed-dupes.mn  package-manifest.in  removed-files.in
browser/locales/: Makefile.in  filter.py  jar.mn  l10n.ini
(+12592 files in other folders)
